--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "geolib": "^3.3.1",
     "lodash": "^4.17.21",
     "mongoose": "^5.13.2",
